--- a/faculty/faculty_marksattendance.html
+++ b/faculty/faculty_marksattendance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance Page</title>
+    <title>Marks & Attendance</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -72,36 +72,51 @@
             margin: auto;
         }
 
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        .form-group label {
-            display: block;
+        .student-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+            border: 1px solid #ddd;
             margin-bottom: 5px;
         }
 
-        .form-group input, .form-group select {
-            width: 100%;
+        .student-row span {
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .subject-buttons {
+            display: flex;
+            gap: 10px;
+        }
+
+        .subject-buttons button {
+            padding: 5px 10px;
+            border: 1px solid transparent;
+            transition: all 0.3s ease;
+        }
+
+        .subject-buttons button.present {
+            background-color: green;
+            color: white;
+        }
+
+        .subject-buttons button.absent {
+            background-color: red;
+            color: white;
+        }
+
+        .attendance-record {
             padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            border-top: 1px solid #ddd;
+            margin-top: 10px;
+            font-size: 14px;
+            color: #555;
         }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        table th, table td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
-        }
-
-        table th {
-            background-color: #f4f4f4;
+        .attendance-record span {
+            display: block;
         }
 
         .dark-mode {
@@ -111,6 +126,32 @@
             --header-text: white;
             --button-bg: gray;
             --button-text: white;
+        }
+
+        .attendance-table {
+            margin-top: 20px;
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .attendance-table th, .attendance-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+
+        .attendance-table th {
+            background-color: #f4f4f4;
+        }
+
+        .attendance-table .present {
+            background-color: green;
+            color: white;
+        }
+
+        .attendance-table .absent {
+            background-color: red;
+            color: white;
         }
     </style>
 </head>
@@ -133,31 +174,28 @@
     </header>
 
     <div class="container">
-        <h2>Add/Update Attendance</h2>
-        <form id="attendance-form">
-            <div class="form-group">
-                <label for="attendance-student-id">Student ID</label>
-                <input type="text" id="attendance-student-id" placeholder="Enter Student ID" required>
-            </div>
-            <div class="form-group">
-                <label for="attendance-subject">Subject</label>
-                <select id="attendance-subject" required>
-                    <option value="" disabled selected>Select Subject</option>
-                    <option value="Java">Java</option>
-                    <option value="DSA">DSA</option>
-                    <option value="Math">Math</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="attendance-status">Attendance</label>
-                <select id="attendance-status" required>
-                    <option value="" disabled selected>Mark Attendance</option>
-                    <option value="Present">Present</option>
-                    <option value="Absent">Absent</option>
-                </select>
-            </div>
-            <button type="submit">Add/Update Attendance</button>
-        </form>
+        <h2>Dynamic Attendance Management</h2>
+        <div id="attendance-container">
+            <!-- Student rows will be generated dynamically -->
+        </div>
+        <div id="attendance-records">
+            <!-- Attendance records will be displayed here -->
+            <table class="attendance-table">
+                <thead>
+                    <tr>
+                        <th>Student ID</th>
+                        <th>Java</th>
+                        <th>DSA</th>
+                        <th>OS</th>
+                        <th>Math</th>
+                        <th>DBMS</th>
+                    </tr>
+                </thead>
+                <tbody id="attendance-table-body">
+                    <!-- Attendance records rows will be dynamically added here -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <script>
@@ -169,6 +207,80 @@
                 ? "Switch to Light Mode"
                 : "Switch to Dark Mode";
         });
+
+        const attendanceContainer = document.getElementById('attendance-container');
+        const attendanceTableBody = document.getElementById('attendance-table-body');
+
+        // Array to store attendance records
+        let attendanceRecordsArray = [];
+
+        // Function to generate student rows
+        function generateStudentRows() {
+            const students = Array.from({ length: 10 }, (_, index) => ({
+                id: `24037176622${index + 1}`,
+                name: `Student ${index + 1}`
+            }));
+
+            attendanceContainer.innerHTML = students.map(student => `
+                <div class="student-row">
+                    <span>${student.name}</span>
+                    <div class="subject-buttons" data-student-id="${student.id}">
+                        <button onclick="markAttendance('${student.id}', 'Java')">Java</button>
+                        <button onclick="markAttendance('${student.id}', 'DSA')">DSA</button>
+                        <button onclick="markAttendance('${student.id}', 'OS')">OS</button>
+                        <button onclick="markAttendance('${student.id}', 'Math')">Math</button>
+                        <button onclick="markAttendance('${student.id}', 'DBMS')">DBMS</button>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        // Function to mark attendance
+        function markAttendance(studentId, subject) {
+            const studentRow = document.querySelector(`.subject-buttons[data-student-id="${studentId}"]`);
+            const subjectButton = studentRow.querySelector(`button[onclick*="${subject}"]`);
+            const recordIndex = attendanceRecordsArray.findIndex(record => record.studentId === studentId && record.subject === subject);
+
+            if (recordIndex !== -1) {
+                // Update existing record
+                attendanceRecordsArray[recordIndex].status = 'present';
+            } else {
+                // Add new record
+                attendanceRecordsArray.push({ studentId, subject, status: 'present' });
+            }
+
+            // Toggle button classes
+            subjectButton.classList.add('present');
+            subjectButton.classList.remove('absent');
+
+            // Update attendance records display
+            updateAttendanceRecords();
+        }
+
+        // Function to update attendance records display
+        function updateAttendanceRecords() {
+            const recordsMap = attendanceRecordsArray.reduce((acc, record) => {
+                if (!acc[record.studentId]) {
+                    acc[record.studentId] = {};
+                }
+                acc[record.studentId][record.subject] = record.status;
+                return acc;
+            }, {});
+
+            attendanceTableBody.innerHTML = Object.entries(recordsMap).map(([studentId, subjects]) => `
+                <tr>
+                    <td>${studentId}</td>
+                    <td class="${subjects.Java === 'present' ? 'present' : 'absent'}">${subjects.Java || 'absent'}</td>
+                    <td class="${subjects.DSA === 'present' ? 'present' : 'absent'}">${subjects.DSA || 'absent'}</td>
+                    <td class="${subjects.OS === 'present' ? 'present' : 'absent'}">${subjects.OS || 'absent'}</td>
+                    <td class="${subjects.Math === 'present' ? 'present' : 'absent'}">${subjects.Math || 'absent'}</td>
+                    <td class="${subjects.DBMS === 'present' ? 'present' : 'absent'}">${subjects.DBMS || 'absent'}</td>
+                </tr>
+            `).join('');
+        }
+
+        // Initialize student rows
+        generateStudentRows();
     </script>
 </body>
 </html>
